--- a/app/src/main/res/layout/activity_search_event_list.xml
+++ b/app/src/main/res/layout/activity_search_event_list.xml
@@ -11,8 +11,9 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="414dp"
-        android:layout_height="197dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.2"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/header"
@@ -24,8 +25,10 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/searchCard"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,23 +39,26 @@
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView2"
-            android:layout_width="345dp"
-            android:layout_height="44dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@color/white"
+            android:elevation="20dp"
             app:iconifiedByDefault="false" />
     </androidx.cardview.widget.CardView>
+
     <Button
         android:id="@+id/bottoneFiltri"
-        android:layout_width="83dp"
-        android:layout_height="33dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/green"
-        android:text="Applica\nfiltri"
+        android:elevation="3dp"
+        android:text="Applica"
         android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/cardView9"
         app:layout_constraintEnd_toEndOf="@+id/searchCard"
         app:layout_constraintTop_toTopOf="@+id/cardView9"
-        android:elevation="3dp"/>
+        tools:ignore="TouchTargetSizeCheck" />
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView8"
         android:layout_width="104dp"
@@ -75,7 +81,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="TouchTargetSizeCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -106,19 +113,31 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="TouchTargetSizeCheck" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <ListView
         android:id="@+id/searchList"
-        android:layout_width="410dp"
-        android:layout_height="693dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.85"
         android:layout_marginTop="-26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView8"
         app:layout_constraintVertical_bias="0.0"
         android:elevation="1dp"/>
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ricerca per: "
+        android:elevation="20dp"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/searchCard"
+        app:layout_constraintStart_toStartOf="@+id/searchCard" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
