--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -8,8 +8,10 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="360dp"
-        android:layout_height="545dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.6"
+        android:layout_margin="20dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +24,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="30dp">
-
 
 
             <LinearLayout
@@ -49,10 +50,10 @@
                     android:id="@+id/delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_delete_forever_24"
                     android:layout_gravity="center_vertical"
-                    app:tint="@color/red"
-                    android:visibility="gone"/>
+                    android:src="@drawable/baseline_delete_forever_24"
+                    android:visibility="gone"
+                    app:tint="@color/red" />
 
             </LinearLayout>
 
@@ -60,28 +61,26 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="2"
                 android:text="Vieni anche tu alla festa bella bella figa"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                android:maxLines="2"/>
-
-
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:cardBackgroundColor="@color/white">
+                app:layout_constraintStart_toStartOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="10dp"
-                    android:layout_margin="5dp">
+                    android:layout_margin="5dp"
+                    android:padding="10dp">
 
                     <LinearLayout
                         android:id="@+id/l1"
@@ -94,8 +93,8 @@
                         <ImageView
                             android:layout_width="20dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/calendar_mark_svgrepo_com"
-                            android:layout_marginEnd="10dp"/>
+                            android:layout_marginEnd="10dp"
+                            android:src="@drawable/calendar_mark_svgrepo_com" />
 
                         <TextView
                             android:id="@+id/eventDate"
@@ -117,8 +116,8 @@
                         <ImageView
                             android:layout_width="20dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/clock_circle_svgrepo_com"
-                            android:layout_marginEnd="10dp"/>
+                            android:layout_marginEnd="10dp"
+                            android:src="@drawable/clock_circle_svgrepo_com" />
 
                         <TextView
                             android:id="@+id/eventHour"
@@ -165,12 +164,13 @@
                     android:background="?android:attr/listDivider" />
 
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10sp"
                 android:text="Eboli, Salerno"
+                android:textSize="10sp"
                 app:layout_constraintBottom_toTopOf="@+id/cardView3"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -197,11 +197,10 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -224,6 +223,7 @@
                 android:id="@+id/heart"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
                 android:elevation="20dp"
                 android:padding="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -254,6 +254,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:background="@color/principal"
                 android:elevation="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
