--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -169,10 +169,13 @@
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="Eboli, Salerno"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toTopOf="@+id/cardView3"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView10"
+                app:layout_constraintVertical_bias="0.86" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView3"
