--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,7 +123,8 @@
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
-                        app:cardElevation="0dp">
+                        app:cardElevation="0dp"
+                        android:backgroundTint="@android:color/transparent">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -137,6 +138,7 @@
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
+                        android:backgroundTint="@android:color/transparent"
                         app:cardElevation="0dp">
 
                         <ImageView
@@ -151,7 +153,8 @@
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
-                        app:cardElevation="0dp">
+                        app:cardElevation="0dp"
+                        android:backgroundTint="@android:color/transparent">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -164,7 +167,8 @@
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
-                        app:cardElevation="0dp">
+                        app:cardElevation="0dp"
+                        android:backgroundTint="@android:color/transparent">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -177,7 +181,8 @@
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
-                        app:cardElevation="0dp">
+                        app:cardElevation="0dp"
+                        android:backgroundTint="@android:color/transparent">
 
                         <ImageView
                             android:layout_width="match_parent"
@@ -190,7 +195,8 @@
                         android:layout_width="149dp"
                         android:layout_height="100dp"
                         android:layout_marginEnd="20dp"
-                        app:cardElevation="0dp">
+                        app:cardElevation="0dp"
+                        android:backgroundTint="@android:color/transparent">
 
                         <ImageView
                             android:layout_width="match_parent"
